# quiver

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  PLAN.md  README.md  REFERENCE.md  TODO.md  build-all.bat  debug1.jl  debug1.sql  debug2.jl  rebuild-debug.bat  rebuild-release.bat  test-all.bat
bindings/python/: .gitignore  CLAUDE.md  LICENSE  format.bat  pyproject.toml
bindings/python/generator/: generate_bindings.py  generator.bat  generator.py
bindings/python/src/psr_database/: __init__.py  _bindings2.py  _ffi.py  database.py  exceptions.py  psrdatabase_build.py
bindings/python/src/quiver/: __init__.py  _c_api.py  _helpers.py  _loader.py  database.py  metadata.py
bindings/python/src/quiver_db/: __init__.py  (+5 more)
bindings/python/tests/: __init__.py  conftest.py  test.bat  test_create.py  test_database_create.py  test_database_csv.py  test_database_csv_export.py  test_database_csv_import.py  test_database_delete.py  test_database_lifecycle.py  test_database_metadata.py  test_database_query.py  test_database_read_element.py  test_database_read_scalar.py  test_database_read_set.py  test_database_read_vector.py  test_database_run_model.py  test_database_time_series.py  test_database_time_series_files.py  test_database_time_series_group.py  test_database_time_series_nulls.py  test_database_time_series_row.py  test_database_transaction.py  test_database_update.py  test_delete.py  test_element.py  test_lua_runner.py  test_read.py  test_relations.py  test_update.py
src/: CLAUDE.md  CMakeLists.txt  c_api.cpp  c_api_common.cpp  c_api_database.cpp  c_api_element.cpp  c_api_internal.h  c_api_lua_runner.cpp  csv.cpp  database.cpp  database_create.cpp  database_csv.cpp  database_csv_export.cpp  database_csv_import.cpp  database_delete.cpp  database_describe.cpp  database_impl.h  database_internal.h  database_metadata.cpp  database_query.cpp  database_read.cpp  database_relations.cpp  database_run_model.cpp  database_templates.h  database_time_series.cpp  database_update.cpp  dimension.cpp  element.cpp  enum_map.cpp  lua_runner.cpp  migration.cpp  migrations.cpp  result.cpp  row.cpp  schema.cpp  schema_validator.cpp  time_dimension.cpp  time_series.cpp  time_series_converter.cpp  time_series_metadata.cpp  (+4 more)
src/binary/: binary.cpp  binary_comparator.cpp  binary_file.cpp  binary_metadata.cpp  binary_utils.h  csv_converter.cpp  dimension.cpp  iteration.cpp  time_properties.cpp
src/blob/: blob.cpp  blob_converter.cpp  blob_csv.cpp  blob_metadata.cpp  blob_metadata_validator.cpp  blob_utils.h  dimension.cpp  time_dimension.cpp  time_properties.cpp
src/c/: CLAUDE.md  common.cpp  database.cpp  database_create.cpp  database_csv.cpp  database_csv_export.cpp  database_csv_import.cpp  database_csv_options.h  database_delete.cpp  database_helpers.h  database_metadata.cpp  database_model.cpp  database_options.h  database_query.cpp  database_read.cpp  database_relations.cpp  database_time_series.cpp  database_transaction.cpp  database_update.cpp  element.cpp  internal.h  lua_runner.cpp  options.cpp
src/c/binary/: binary.cpp  binary_comparator.cpp  binary_file.cpp  binary_metadata.cpp  csv_converter.cpp
src/c/blob/: blob.cpp  blob_csv.cpp  blob_metadata.cpp
src/c/expression/: expression.cpp
src/cli/: main.cpp
src/expr/: expression.cpp  nodes.cpp
src/expression/: expression.cpp  expression_aggregate.cpp  expression_aggregate_agents.cpp  expression_binary.cpp  expression_file.cpp  expression_helpers.h  expression_node.cpp  expression_rename_agents.cpp  expression_scalar.cpp  expression_select_agents.cpp  expression_ternary.cpp  expression_unary.cpp  nodes.cpp
src/utils/: csv_format.h  datetime.h  string.h
tests/: CLAUDE.md  CMakeLists.txt  schema_relations.sql  test_binary.cpp  test_binary_comparator.cpp  test_binary_file.cpp  test_binary_metadata.cpp  test_binary_time_properties.cpp  test_blob.cpp  test_blob_csv.cpp  test_blob_metadata.cpp  test_blob_time_properties.cpp  test_c_api.cpp  test_c_api_binary.cpp  test_c_api_binary_comparator.cpp  test_c_api_binary_file.cpp  test_c_api_binary_metadata.cpp  test_c_api_blob.cpp  test_c_api_blob_csv.cpp  test_c_api_blob_metadata.cpp  test_c_api_csv_converter.cpp  test_c_api_database.cpp  test_c_api_database_create.cpp  test_c_api_database_csv.cpp  test_c_api_database_csv_export.cpp  test_c_api_database_csv_import.cpp  test_c_api_database_delete.cpp  test_c_api_database_lifecycle.cpp  test_c_api_database_metadata.cpp  test_c_api_database_query.cpp  test_c_api_database_read.cpp  test_c_api_database_read_scalar.cpp  test_c_api_database_read_set.cpp  test_c_api_database_read_vector.cpp  test_c_api_database_run_model.cpp  test_c_api_database_time_series.cpp  test_c_api_database_time_series_files.cpp  test_c_api_database_time_series_group.cpp  test_c_api_database_time_series_metadata.cpp  test_c_api_database_time_series_nulls.cpp  (+60 more)
tests/benchmark/: benchmark.cpp
tests/invalid/: label_wrong_type.sql
tests/sandbox/: sandbox.cpp
tests/schemas/invalid/: duplicate_attribute_time_series.sql  duplicate_attribute_vector.sql  fk_actions.sql  fk_not_null_set_null.sql  label_not_null.sql  label_not_unique.sql  no_configuration.sql  set_no_unique.sql  vector_no_index.sql
tests/schemas/valid/: all_types.sql  basic.sql  collections.sql  composite_helpers.sql  csv_export.sql  describe_multi_group.sql  mixed_time_series.sql  multi_dim_time_series.sql  multi_time_series.sql  nullable_time_series.sql  relations.sql  time_series.sql
tests/test_create/: test_create_parameters_and_vectors.sql  test_create_vectors_with_relations.sql
tests/test_migrations/: test_migrations.cpp
tests/test_read/: test_read.jl  test_read.sql
tests/test_valid_database_definitions/: test_invalid_label_constraints_null.sql  test_invalid_label_constraints_text.sql  test_invalid_label_constraints_unique.sql  test_invalid_set_table_without_unique_constraint.sql  test_schema_validator.cpp  test_string_default_value.sql  test_valid_database_definitions.jl  test_valid_schema_full.sql
(+999 files in other folders)
