[project]
name = "quiverdb"
version = "0.4.0"
requires-python = ">=3.13"
dependencies = [
    "cffi>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quiverdb"]

[project.scripts]
