[project]
name = "quiverdb"
version = "0.4.0"
requires-python = ">=3.13"
dependencies = [
    "cffi>=2.0.0",
]

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "../.."
cmake.build-type = "Release"
cmake.args = ["-DQUIVER_BUILD_TESTS=OFF"]
wheel.packages = ["src/quiverdb"]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
